tests/ui/wrong_num_args.stderr
[tests/ui/wrong_num_args.pea:11:5] error: wrong number of arguments: expected 2, found 1
[tests/ui/wrong_num_args.pea:1:4-1:6] note: function being called has signature `fn (i64, i64)`

error: aborting due to 1 previous error

