tests/ui/wrong_num_args.pea
fn foo(a: i64, b: i64) {
    let q = a * 3 - b;
    println!(q);
    println!(b);
}

fn main() {
    let x = foo;

    // Wrong number of arguments!!!
    x(3);
}
